# rustyray

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yml
rustyray/: Cargo.toml
rustyray-ffi/: Cargo.toml  build.rs
rustyray-ffi/binding/: binding.h
rustyray-ffi/src/: color.rs  ffi.rs  lib.rs  vector.rs
rustyray-math/: Cargo.toml
rustyray-math/src/: lib.rs  prelude.rs  rectangle.rs  vector.rs
rustyray-sys/: Cargo.toml  README.md  build.rs
rustyray-sys/src/: audio.rs  camera.rs  color.rs  consts.rs  ffi.rs  lib.rs  math.rs  rectangle.rs  texture.rs  vector.rs
rustyray/examples/: bunnymark.rs  drop_clone.rs  window.rs
rustyray/examples/audio/: module_playing.rs  music_stream.rs  sound_loading.rs  sound_multi.rs
rustyray/src/: lib.rs  prelude.rs
rustyray/src/core/: audio.rs  color.rs  consts.rs  draw.rs  drawing.rs  image.rs  math.rs  mod.rs  window.rs
rustyray/src/core/math/: easings.rs  mod.rs  rectangle.rs  vector.rs
