[package]
name = "rustyray-math"
description = "Math library for Rustyray"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/wizzymore/rustyray"
license-file.workspace = true

[dependencies]
rustyray-ffi = { version = "0.1.0", path = "../rustyray-ffi" }
serde = { version = "1.0.217", features = ["derive"] }

[features]
default = ["serde"]
serde = []
