[package]
name = "rustyray-sys"
description = "Low level bindings for raylib"
version = "0.1.14"
edition = "2024"
repository = "https://github.com/wizzymore/rustyray"
exclude = [
    "raylib/.github",
    "raylib/examples",
    "raylib/logo",
    "raylib/projects",
    "raylib/tools",
]
readme = "README.md"
license.workspace = true
rust-version.workspace = true

[dependencies]
libc = "0.2"
thiserror = "2.0.11"

[build-dependencies]
cmake = "0.1.54"
fs_extra = "1.3.0"

[features]
default = []
# Build Raylib headless for docs. Up to you to link
nobuild = []

# Build for wayland on linux. Should fix #119
wayland = []

# OpenGL stuff, intended for fixing #122
opengl_33 = []
opengl_21 = []
# opengl_11 = [] I couldn't get this one working, the others were fine in my limited testing (unsure about wayland compatibility)
opengl_es_20 = []

# config.h's SUPPORT_CUSTOM_FRAME_CONTROL
custom_frame_control = []

# build raylib as a shared library
raylib_shared = []

# custom build options
screen_capture = []
