[package]
name = "rustyray"
description = "High-level wrapper on top of the low-level rustyray-sys bindings"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/wizzymore/rustyray"
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rustyray-sys = { version = "0", path = "../rustyray-sys" }
thiserror = "2.0.11"

[dev-dependencies]
rand = "0.9.0"

[[example]]
name = "window"

[[example]]
name = "bunnymark"

[[example]]
name = "audio-sound-loading"
path = "examples/audio/sound_loading.rs"

[[example]]
name = "audio-sound-multi"
path = "examples/audio/sound_multi.rs"

[[example]]
name = "audio-music-stream"
path = "examples/audio/music_stream.rs"

[[example]]
name = "audio-module-playing"
path = "examples/audio/module_playing.rs"

[features]
default = []

# Build for wayland on linux. Should fix #119
wayland = ["rustyray-sys/wayland"]

# OpenGL stuff, intended for fixing #122
opengl_33 = ["rustyray-sys/opengl_33"]
opengl_21 = ["rustyray-sys/opengl_21"]
# opengl_11 = [] I couldn't get this one working, the others were fine in my limited testing (unsure about wayland compatibility)
opengl_es_20 = ["rustyray-sys/opengl_es_20"]

# config.h's SUPPORT_CUSTOM_FRAME_CONTROL
custom_frame_control = ["rustyray-sys/custom_frame_control"]
